--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   text-align: center;
+  background-color: lightgray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home, .main {
+  font-size: 5rem;
+  min-height: 76vh;
+  text-shadow: 2px 3px 2.5px #000000;
+  background-color: rgb(2, 96, 128);
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  font-size: .9rem;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: .5px 1.5px 3px lightblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 12vh;
+  font-style: 1.2rem;
+  background-color: #003f5c;
+  border-bottom: 3px solid #f4f4f4;
+}
+
+.nav-links {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  color: white;
+  font-size: 1.2rem;
+}
+
+li {
+  
+  font-style: italic;
+  color: lightgray;
+}
+
+li:hover {
+border-bottom: 1px solid red;
+color: aqua;
+}
+
+a {
+  text-decoration: none;
+}
+.Footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 12vh;
+  background-color: #003f5c;
+  color: white;
+  font-size: 1rem;
+}
+
+@media screen and (max-width:768px){
+  .nav-links {
+    display: none;
+    font-size: 1rem;
+    width: 55%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+display: inline-block;
+}
 }
