--- a/src/App.css
+++ b/src/App.css
@@ -421,6 +421,55 @@ Footer p {
 
 
 }
+
+@media screen and (min-width:768px) and (max-width:800px){
+
+  /* NAVVVV */
+  h3 {
+    /* display: inline-block; */
+    font-size: .7rem;
+    margin-left: 53px;
+    }
+
+.burger-icon {
+  position: absolute;
+  margin-left: 660px;
+  margin-top: 30px;
+  display: block;
+}
+
+.nav-links {
+  background-color: lightslategray;
+  background-size: contain;
+  position: absolute;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 450px;
+  width: 31%;
+  padding-right: 16px;
+  padding-bottom: 8px;
+  
+}
+  /* HOMEMMMMMMMMMMMMMMM */
+.Home-img{
+  margin-top: 10px;
+  text-align: center;
+  height: 500px;
+  width: 100%;
+  background-color: lightgray;
+  background-image: url("/images/fashion-3080644_1920.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+.Home-img div {
+  text-align: left;
+  margin-top: 130px;
+  margin-left: 25px;
+  font-size: 25px;
+}
+
+}
 /* contact main page */
 /* .contact-main{
   padding-top: 25px;
